# intelligent-investor

./: .gitignore  README.md  package-lock.json  package.json
agent/: =0.28.0  pyproject.toml
agent/src/: __main__.py  agent.py  auth.py  config.py  main.py  models.py  prompts.py
auth-server/: package.json
auth-server/src/: app.ts  index.ts
auth-server/src/db/: connection.ts  migrate.ts  seed.sql
auth-server/src/routes/: auth.ts
client/: package-lock.json  package.json  vite.config.ts
client/src/: App.tsx
client/src/api/: agent.ts  auth.ts  cashflow.ts  client.ts  expenses.ts  transactions.ts
client/src/hooks/: useChat.ts
client/src/styles/: globals.css
client/src/types/: index.ts
mcp-server/: package-lock.json  package.json  pyproject.toml  tsconfig.json
mcp-server-python/: pyproject.toml
mcp-server-python/src/: server.py
mcp-server-python/src/tools/: categorize_transactions.py  get_cashflow.py  get_cashflow_history.py  get_expenses_by_category.py  get_transactions.py  get_transactions_total.py
mcp-server-python/src/utils/: api_client.py  config.py
mcp-server/src/: index.ts  middleware.py  server.py
mcp-server/src/tools/: calculate.py  categorizeTransactions.ts  categorize_transactions.py  getCashflow.ts  getCashflowHistory.ts  getExpensesByCategory.ts  getTransactions.ts  getTransactionsTotal.ts  get_cashflow.py  get_cashflow_history.py  get_expenses_by_category.py  get_transactions.py  get_transactions_total.py
mcp-server/src/utils/: auth.py  (+4 more)
server/: package-lock.json  package.json  tsconfig.json
server/src/: app.ts  index.ts
(+21 files in other folders)
