[project]
name = "intelligent-investor-agent"
version = "1.0.0"
description = "AI agent for Intelligent Investor using LangChain and Ollama"
requires-python = ">=3.11"
dependencies = [
    "langchain-ollama>=0.3.0",
    "langchain-mcp-adapters>=0.1.0",
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
